--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-form": "^8.3.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3"
   },
